# nanovg-beef

./: .gitmodules  BeefProj.toml  README.md
example/: BeefProj.toml  BeefSpace.toml
example/src/: Program.bf
libs/windows/Debug/: nanovg_shared.lib  nanovg_static.lib
libs/windows/Release/: nanovg_shared.lib  nanovg_static.lib
native/: CMakeLists.txt  buildall.bat
native/src/: main.c
src/: NanoVG.bf  NanoVG_GL.bf
